Support getting customer by mail and password
