# customers-service/customers-client/src/main/resources/api.yaml
@@ -120,6 +120,28 @@ paths:
       responses:
         "200":
           description: Specific customer deleted
+  /auth:
+    get:
+      tags:
+        - Customers
+      description: Gets customer by mail and password
+      operationId: getAuthCustomer
+      parameters:
+        - in: query
+          name: mail
+          schema:
+            type: string
+        - in: query
+          name: password
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Returns customer by mail and password
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CustomerDto"
 
 components:
   schemas:
